[FIX] website: make timeline dots visible across all color presets
Before this commit, the timeline (*) dots were invisible when
using preset 4 because they shared the same color as the background
(`text-o-color-1` on `o-color-1` background).

This fix implements a solution that ensures dots are always visible by
using button primary colors for all presets.

*: s_timeline, s_timeline_list snippets

task-4922302

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -855,6 +855,7 @@ table.table_desc tr td {
     width: var(--o-timeline-dot-size, 24px);
     height: var(--o-timeline-dot-size, 24px);
     left: var(--o-dot-left);
+    color: $primary;
 
     &:before, &:after {
         position: absolute;
@@ -870,6 +871,12 @@ table.table_desc tr td {
 
     &:after {
         inset: 8px;
+    }
+}
+
+@for $index from 1 through 5 {
+    .o_cc#{$index} .o_dot {
+        color: var(--o-cc#{$index}-btn-primary);
     }
 }
 
